@@ -4,6 +4,7 @@ Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.
 Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].
 
 ## [UNRELEASED] -- XXXX-XX-XX
+* InfoLogger zum Loggen für allgemeiner Informationen hinzufügen.  
 
 
 ## [12.65.19] -- 2023-09-06
